# Billing_ai

./: .gitignore  README.md  pyproject.toml
src/: app.py  model_interface.py  prompts.py  runner.py  tools.py  utils.py
src/ontology/: documentations.py
src/ontology/care_paths/: chirurgie.json  dermatologie.json  general_care.json  gynaekologie.json  radiologie.json
src/ontology/gops/chirurgie/: chirurgie_allgemeine_ziffern.json  chirurgische_gebuehrenordnungspositionen.json  chirurgische_spezielle_zusatzziffern_1.json  chirurgische_spezielle_zusatzziffern_2.json  chirurgische_spezielle_zusatzziffern_3.json  chirurgische_spezielle_zusatzziffern_4.json  chirurgische_zusatzziffern.json
src/ontology/gops/dermatologie/: dermatologische_spezialziffern_01.json  dermatologische_spezialziffern_02.json  dermatologische_spezialziffern_03.json  dermatologische_spezialziffern_04.json  dermatologische_spezialziffern_05.json  dermatologische_spezialziffern_06.json  dermatologische_spezialziffern_07.json  dermatologische_spezialziffern_08.json  dermatologische_spezialziffern_09.json  dermatologische_spezialziffern_10.json  dermatologische_spezialziffern_11.json  dermatologische_spezialziffern_12.json  dermatologische_spezialziffern_13.json  dermatologische_spezialziffern_14.json  (+6 more)
src/ontology/patients/: patient1.json  patient2.json  patient3.json  patient4.json  patient5.json
src/ontology/physicians/: chirurgie.json  dermatologie.json  general_care.json  gynaekologie.json  radiologie.json
src/ontology/schemas/: care_path.py  gop_list.py  patient.py  physician.py
(+46 files in other folders)
