[tool.poetry]
name = "billing-ai"
version = "0.1.0"
description = "EBM billing data preparation and agent pipeline prototypes."
authors = ["Billing AI Contributors"]
packages = [{ include = "billing_ai", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
PyMuPDF = "^1.26.0"
mcp = "^1.13.0"
pydantic = "^2.13.0"
python-dotenv = "^1.1.0"
requests = "^2.34.2"
streamlit = "^1.58.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
